[package]
name = "fillerkiller-api"
version = "0.1.0"
edition = "2021"
description = "FillerKiller API — Rust + Axum service for filler/canon episode voting"
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
jsonwebtoken = "9"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
governor = "0.8"
# App metrics: a Prometheus exposition served on a private, instance-local port
# (scraped by the Cloud Run GMP collector sidecar / any internal Prometheus).
# default-features=false drops the crate's own HTTP listener + push-gateway — we
# render through our own Axum route instead.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

[features]
# DB-backed integration tests (sqlx::test). Off by default so `cargo test` stays
# fully offline; CI enables it with a Postgres service + DATABASE_URL.
integration = []
